--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-amap",
-  "version": "0.5.10",
-  "description": "vue amap",
+  "name": "vue2-amap",
+  "version": "0.0.1",
+  "description": "vue2 amap",
   "main": "./dist/index.js",
   "sideEffects": false,
   "directories": {
@@ -10,6 +10,7 @@
   "scripts": {
     "dev": "node build/dev-server.js --content-base dist/",
     "build": "node build/build.js",
+    "build:lib": "cross-env LIB_ENV=lib && node build/lib.js",
     "lib": "npm run test && export LIB_ENV=lib && node build/lib.js",
     "start": "node build/dev-server.js",
     "lint": "eslint src",
@@ -20,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ElemeFE/vue-amap.git"
+    "url": "git+https://github.com/liuyonghu/vue2-amap.git"
   },
   "files": [
     "dist",
@@ -29,9 +30,9 @@
   "author": "elemefe",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ElemeFE/vue-amap/issues"
+    "url": "https://github.com/liuyonghu/vue2-amap/issues"
   },
-  "homepage": "https://github.com/ElemeFE/vue-amap#readme",
+  "homepage": "https://github.com/liuyonghu/vue2-amap#readme",
   "devDependencies": {
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.26.0",
