--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "dev": "node build/dev-server.js --content-base dist/",
     "build": "node build/build.js",
-    "build:lib": "cross-env LIB_ENV=lib && node build/lib.js",
+    "build:lib": "cross-env NODE_ENV=production  node build/lib.js",
+    "test:lib": "cross-env NODE_ENV=development  node build/lib.js",
     "lib": "npm run test && export LIB_ENV=lib && node build/lib.js",
     "start": "node build/dev-server.js",
     "lint": "eslint src",
