--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,8 @@
     "quotes": 0,
     "eqeqeq": 0,
     "curly": 0,
-    "no-trailing-spaces": 0
+    "no-trailing-spaces": 0,
+    "no-multi-spaces": 0,
+    "space-in-parens": 0
   }
 }
